# B4task4

./: CMakeLists.txt  README.md  plot_heatmap.gp  run.sh
include/: Gauss.h  Greeter.h  Laplace.h  Poisson.h
src/: Gauss.cpp  Greeter.cpp  Laplace.cpp  analyze_node.cpp  constructor.cpp  main.cpp  makeMatrix.cpp  output_node.cpp  output_phi.cpp  poisson.cpp  read_node.cpp  showMap.cpp  solver.cpp
